starspan ChangeLog
$Id$
                                    

2005-04-28 (0.993)
	Hack in starspan_myErrorHandler (starspan_util.cc) as a workaround
	in current GDAL code which doesn't implement SetScale/SetOffset 
	methods for some raster band types.  
	
	Traverser code cleanup (traverser.h, traverser.cc):
	Removed old methods for rasterization of polygons:
		processValidPolygon_FF(geos_poly)
		processValidPolygon_BB(geos_poly)
	Versions containing those methods are:
	    traverser.h,v 1.9
		traverser.cc,v 1.10
		
	starspan_countbyclass.cc: verbose messages and flush for each
	finished feature.
	
	Note: configure doesn't set execution permission to script 
	starspan. This flag is set by `make install' on destination.
	For running the tests under tests/, I added a `chmod +x ../starspan'
	to tests/Makefile. I discarded adding a `chmod +x starspan' to
	configure.in (in AC_OUTPUT), as I'm not sure if that's portable.
	   
	
2005-04-28 (0.99 -released)
	Quadtree algorithm implemented for polygon rasterization:
	New traverser/polyqt.cc.
	Preliminary tests OK. The speedup over the flood-fill algorithm
	with a polygon that	contains 22860 pixels is:
	   time(flood-fill) / time(quadtree) = 98s/4s = 24.5 (!)
	TODO: More tests; check the other goemetry types resulting from 
	intersections that are ignored.
	
	starspan2.cc: shutdown calls to release resources: input data 
	objects and calls to CPLPopErrorHandler() and geos::Unload::Release().

	mksrcdist.sh: using my developer account to export from cvs
	(currently anonymous access to casil is not working.)

	Version released today: 0.99
	
2005-04-26 (0.98beta)
	Changes committed.
	Removed temporary NEW-SOURCES-PENDING-MERGE-COMMIT/.
	Pending: configure regeneration.
	
2005-04-21 (*****  to-be 0.98beta   )
	Traverser: Finally implemented a flood-filling algorithm to 
	rasterize polygons. Temporary source files:(*)
		NEW-SOURCES-PENDING-MERGE-COMMIT/traverser/traverser.h
		NEW-SOURCES-PENDING-MERGE-COMMIT/traverser/traverser.cc