@@ -2,6 +2,10 @@ starspan ChangeLog
 $Id$
                                     
 
+2005-05-21 (0.994)
+	PATH in starspan{.in} was not set to include GDAL and GEOS's bin/
+	directories. Fixed.
+	
 2005-04-28 (0.993)
 	Hack in starspan_myErrorHandler (starspan_util.cc) as a workaround
 	in current GDAL code which doesn't implement SetScale/SetOffset 
